[tool.poetry]
name = "adas-original-task"
version = "0.1.0"
description = ""
authors = ["Hajime Yagihara <eitiwai@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
backoff = "^2.2.1"
numpy = "^2.1.1"
openai = "^1.44.1"
pandas = "^2.2.2"
tqdm = "^4.66.5"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
